test/library/packages/Sort/errors/errors-keyPart.tStrStr.good
errors-keyPart.chpl:9: In function 'main':
errors-keyPart.chpl:17: error: The keyPart method in tStrStr must return a tuple with 1st element int(?) when used with int(64) elements
